# swift-compilation-database

./: .gitignore  .swiftlint.yml  BUILD.bazel  Makefile  README.md  WORKSPACE  project.yml
CompilationDatabaseGenerator/: Package.swift
CompilationDatabaseGenerator/Sources/CompilationDatabaseGenerator/: Array+convenience.swift  Bazel.swift  CompilationDatabaseEntry.swift  Task.swift  URL+convenience.swift  Xcodebuild.swift  main.swift
Sources/ModuleA/: ModuleA1.swift  ModuleA2.swift
Sources/ModuleB/: ModuleB.swift  Something+conformance.swift  SomethingProtocol.swift
Sources/TagCrashModule/: Crash.swift
